deployment/frontend/sitea-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sitea-frontend
    app.kubernetes.io/component: sitea-frontend
    app.kubernetes.io/instance: sitea-frontend
    app.kubernetes.io/name: sitea-frontend
    app.kubernetes.io/part-of: sitea-frontend
    app.openshift.io/runtime-version: micro
  name: sitea-frontend
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sitea-frontend
    deployment: sitea-frontend
