deployment/frontend/siteb-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: siteb-frontend
    app.kubernetes.io/component: siteb-frontend
    app.kubernetes.io/instance: siteb-frontend
    app.kubernetes.io/name: siteb-frontend
    app.kubernetes.io/part-of: siteb-frontend
    app.openshift.io/runtime-version: micro
  name: siteb-frontend
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: siteb-frontend
    deployment: siteb-frontend
