deployment/frontend/sitea-frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sitea-frontend
    app.kubernetes.io/component: sitea-frontend
    app.kubernetes.io/instance: sitea-frontend
    app.kubernetes.io/name: sitea-frontend
    app.kubernetes.io/part-of: sitea-frontend
    app.openshift.io/runtime-version: micro
  name: sitea-frontend
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: sitea-frontend
    weight: 100
  wildcardPolicy: None
