deployment/frontend/siteb-frontend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: siteb-frontend
    app.kubernetes.io/component: siteb-frontend
    app.kubernetes.io/instance: siteb-frontend
    app.kubernetes.io/name: siteb-frontend
    app.kubernetes.io/part-of: siteb-frontend
    app.openshift.io/runtime-version: micro
  name: siteb-frontend
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: siteb-frontend
    weight: 100
  wildcardPolicy: None
